# numsim-codegen

./: .gitignore  CMakeLists.txt  README.md  REVIEW-pr-57.md  REVIEW-pr-58.md  REVIEW-stack-42-47.md  REVIEW-stack-51-55.md  SCOPE-moose-hencky.md  SCOPE-spectral-lowering.md  SCOPE-tensor-history.md
.github/workflows/: build.yml
LICENSES/: CPM-MIT.txt
cmake/: check_header_purity.cmake  warnings.cmake
docs/: workflow.md
docs/j2-plasticity/: README.md
docs/j2-plasticity/reproduce/: emit_nl.cpp  plot_j2.cpp  plot_j2.py  plot_nl.cpp  plot_nl.py
docs/reviews/: REVIEW-pr-62-round3.md
examples/: CMakeLists.txt  elastic_tangent.cpp  first_piola_svk.cpp  first_piola_svk_recipe.h  hencky_hyperelastic.cpp  hencky_recipe.h  linear_elasticity.cpp  moose_linear_elastic.cpp  recipe_registry.h  recipe_registry_gen.cpp  resin_curing.cpp  stvenant_kirchhoff.cpp  stvenant_kirchhoff_recipe.h  svk_from_energy.cpp  svk_from_energy_recipe.h
include/numsim_codegen/: numsim_codegen.h  recipe.h  recipe_render.h
include/numsim_codegen/code_emit/: code_emit_pipeline.h  codegen_context.h  leaf_collector.h  linear_algebra_emitter.h  scalar_code_emit.h  spectral_decompose_emit.h  tensor_code_emit.h  tensor_to_scalar_code_emit.h
include/numsim_codegen/passes/: algorithmic_tangent_pass.h  code_emit_pass.h  local_jacobian_pass.h  local_newton_lowering_pass.h  pass.h  pass_manager.h  pass_tags.h  recipe_view.h  symbol_validation_pass.h  tensor_space_consistency_pass.h  time_integration_pass.h
include/numsim_codegen/passes/internal/: algorithmic_tangent.h  backward_euler.h  pass_bodies.h
include/numsim_codegen/runtime/: spectral.h
include/numsim_codegen/targets/: moose_material.h  numsim_material.h  standalone_cxx.h  target.h  target_factory.h
src/targets/: moose_material.cpp  numsim_material.cpp  standalone_cxx.cpp  target_factory.cpp
tests/: AlgorithmicTangentTest.cpp  CMakeLists.txt  CodegenContextTest.cpp  IntegrationTest.cpp  LinearAlgebraEmitterTest.cpp  LocalJacobianTest.cpp  LocalNewtonTest.cpp  MooseTargetTest.cpp  NumSimMaterialTargetTest.cpp  PassFrameworkTest.cpp  RecipeRegistrySmokeTest.cpp  RecipeTest.cpp  RoleFlexibilityTest.cpp  ScalarCodeEmitTest.cpp  SpectralCodeEmitTest.cpp  SpectralMirrorTest.cpp  StateVariableTest.cpp  TargetFactoryTest.cpp  TensorCodeEmitTest.cpp  TimeIntegrationTest.cpp
tests/internal/: state_variable_alignment_access.h
tests/support/: numerical_tangent_verifier.h
